kubernetes_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plumber-on-k8s-service
spec:
  type: LoadBalancer
  selector:
    app: plumber-on-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
